feat: test/evals modules